--- a/index.html
+++ b/index.html
@@ -6,76 +6,78 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SD Web 2 Assignment 1</title>
   <link rel="stylesheet" href="main.css" />
-  <script src="index.js"></script>
+  <script src="script.js"></script>
 </head>
-<div>
-  <div>
+
+<body>
+  <header>
     <nav>
-      <div><a href="index.html">Home</a></div>
-      <!-- Create a list with placeholder links for 3 other pages -->
+      <a href="index.html">Home</a>
+      <a href="index.html">About</a>
+      <a href="index.html">Contact Us</a>
+      <a href="index.html">Hiring</a>
     </nav>
-  </div>
-  <div>
-    <div>
-      <h1>SAIT Software Developer Program Web 2 Assignment 1</h1>
-      <p>
-        Complete the JavaScript exercises below. Check the console for output
-        and fill in the results on this page.
-      </p>
-    </div>
-    <div id="exercise-1">
+    <h1>SAIT Software Developer Program Web 2 Assignment 1</h1>
+    <p>
+      Complete the JavaScript exercises below. Check the console for output
+      and fill in the results on this page.
+    </p>
+  </header>
+
+  <main>
+    <section id="exercise-1">
       <h1>Exercise 1: Print Character Names</h1>
       <p>Print out the names of each character in the console.</p>
       <div class="output">
-        <h1>Results:</h1>
+        <h2>Results:</h2>
         <ul id="names-list">
           <!-- Character names will be populated here -->
         </ul>
       </div>
-    </div>
+    </section>
 
-    <div id="exercise-2">
+    <section id="exercise-2">
       <h1>Exercise 2: Filter by Age</h1>
       <p>Print out the names of characters whose age is less than 40.</p>
       <div class="output">
-        <h1>Results:</h1>
+        <h2>Results:</h2>
         <ul id="young-characters-list">
           <!-- Filtered character names will be populated here -->
         </ul>
       </div>
-    </div>
+    </section>
 
-    <div id="exercise-3">
+    <section id="exercise-3">
       <h1>Exercise 3: Reusable Function for Lists</h1>
       <p>
         Create a function that takes any array and renders a list of character names on the page.
       </p>
       <div class="output">
-        <h1>Results:</h1>
+        <h2>Results:</h2>
         <ul id="function-list">
           <!-- Function-generated list will be populated here -->
         </ul>
       </div>
-    </div>
+    </section>
 
-    <div id="exercise-4">
+    <section id="exercise-4">
       <h1>Exercise 4: Age Filter Function</h1>
       <p>
         Create a function that takes an array and an age threshold, then displays characters below that age.
       </p>
       <div class="output">
-        <h1>Results:</h1>
+        <h2>Results:</h2>
         <ul id="age-filter-list">
           <!-- Age-filtered results will be populated here -->
         </ul>
       </div>
-    </div>
+    </section>
 
-    <div id="exercise-5">
+    <section id="exercise-5">
       <h1>Exercise 5: Error Handling</h1>
       <p>Add error handling to check if objects have a "name" property.</p>
       <div class="output">
-        <h1>Results:</h1>
+        <h2>Results:</h2>
         <ul id="error-handling-list">
           <!-- Error-handled results will be populated here -->
         </ul>
@@ -83,13 +85,13 @@
           <!-- Error messages will be displayed here -->
         </div>
       </div>
-    </div>
+    </section>
 
-    <div id="exercise-6">
+    <section id="exercise-6">
       <h1>Exercise 6: Test Error Handling</h1>
       <p>Test your error handling by using a broken array.</p>
       <div class="output">
-        <h1>Results:</h1>
+        <h2>Results:</h2>
         <ul id="broken-array-list">
           <!-- Broken array test results will be populated here -->
         </ul>
@@ -97,8 +99,9 @@
           <!-- Error messages from broken array will be displayed here -->
         </div>
       </div>
-    </div>
-    <div>
+    </section>
+
+    <section>
       <div>
         <h1>Article Collection</h1>
       </div>
@@ -107,7 +110,7 @@
         <!-- specific article -->
         <div>
           <div>
-            <h1>Article Title</h1>
+            <h2>Article Title</h2>
             <p></p>
             <img src="" alt="" />
             <div>
@@ -116,7 +119,14 @@
           </div>
           <div>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis quibusdam, iure neque quisquam esse itaque natus fuga provident ad et! Esse, maxime ab deleniti nemo voluptates, incidunt assumenda nesciunt odio delectus, ipsum rem dolores ducimus laudantium quas magnam ad cupiditate tempore quis? Provident fuga nobis delectus nemo. Consectetur exercitationem sequi pariatur rerum soluta mollitia dolor nam officia cupiditate iusto animi qui a voluptate eligendi aut perspiciatis quam numquam perferendis repellendus dolore, ratione aliquam? Cumque minima blanditiis maiores, quia ea sunt quam consectetur sit illo iusto eligendi modi fugiat. Quisquam laborum culpa odit dignissimos dolor repudiandae facilis sapiente quasi debitis quas!
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis quibusdam, iure neque quisquam esse itaque
+              natus fuga provident ad et! Esse, maxime ab deleniti nemo voluptates, incidunt assumenda nesciunt odio
+              delectus, ipsum rem dolores ducimus laudantium quas magnam ad cupiditate tempore quis? Provident fuga
+              nobis delectus nemo. Consectetur exercitationem sequi pariatur rerum soluta mollitia dolor nam officia
+              cupiditate iusto animi qui a voluptate eligendi aut perspiciatis quam numquam perferendis repellendus
+              dolore, ratione aliquam? Cumque minima blanditiis maiores, quia ea sunt quam consectetur sit illo iusto
+              eligendi modi fugiat. Quisquam laborum culpa odit dignissimos dolor repudiandae facilis sapiente quasi
+              debitis quas!
             </p>
           </div>
           <div>
@@ -124,11 +134,12 @@
           </div>
         </div>
       </div>
-    </div>
-  </div>
-  <div>
+    </section>
+  </main>
+
+  <footer>
     <p>&copy; 2025 SAIT</p>
-  </div>
-</div>
+  </footer>
+</body>
 
 </html>
