fixed all HTML errors - now passes W3C html checker. Also added some responsiveness

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SD Web 2 Assignment 1</title>
-  <link rel="stylesheet" href="main.css" />
+  <link rel="stylesheet" href="main.css">
   <script src="script.js"></script>
 </head>
 
@@ -26,10 +26,10 @@
 
   <main>
     <section id="exercise-1">
-      <h1>Exercise 1: Print Character Names</h1>
+      <h2>Exercise 1: Print Character Names</h2>
       <p>Print out the names of each character in the console.</p>
       <div class="output">
-        <h2>Results:</h2>
+        <h3>Results:</h3>
         <ul id="names-list">
           <!-- Character names will be populated here -->
         </ul>
@@ -37,10 +37,10 @@
     </section>
 
     <section id="exercise-2">
-      <h1>Exercise 2: Filter by Age</h1>
+      <h2>Exercise 2: Filter by Age</h2>
       <p>Print out the names of characters whose age is less than 40.</p>
       <div class="output">
-        <h2>Results:</h2>
+        <h3>Results:</h3>
         <ul id="young-characters-list">
           <!-- Filtered character names will be populated here -->
         </ul>
@@ -48,12 +48,12 @@
     </section>
 
     <section id="exercise-3">
-      <h1>Exercise 3: Reusable Function for Lists</h1>
+      <h2>Exercise 3: Reusable Function for Lists</h2>
       <p>
         Create a function that takes any array and renders a list of character names on the page.
       </p>
       <div class="output">
-        <h2>Results:</h2>
+        <h3>Results:</h3>
         <ul id="function-list">
           <!-- Function-generated list will be populated here -->
         </ul>
@@ -61,12 +61,12 @@
     </section>
 
     <section id="exercise-4">
-      <h1>Exercise 4: Age Filter Function</h1>
+      <h2>Exercise 4: Age Filter Function</h2>
       <p>
         Create a function that takes an array and an age threshold, then displays characters below that age.
       </p>
       <div class="output">
-        <h2>Results:</h2>
+        <h3>Results:</h3>
         <ul id="age-filter-list">
           <!-- Age-filtered results will be populated here -->
         </ul>
@@ -74,10 +74,10 @@
     </section>
 
     <section id="exercise-5">
-      <h1>Exercise 5: Error Handling</h1>
+      <h2>Exercise 5: Error Handling</h2>
       <p>Add error handling to check if objects have a "name" property.</p>
       <div class="output">
-        <h2>Results:</h2>
+        <h3>Results:</h3>
         <ul id="error-handling-list">
           <!-- Error-handled results will be populated here -->
         </ul>
@@ -88,10 +88,10 @@
     </section>
 
     <section id="exercise-6">
-      <h1>Exercise 6: Test Error Handling</h1>
+      <h2>Exercise 6: Test Error Handling</h2>
       <p>Test your error handling by using a broken array.</p>
       <div class="output">
-        <h2>Results:</h2>
+        <h3>Results:</h3>
         <ul id="broken-array-list">
           <!-- Broken array test results will be populated here -->
         </ul>
@@ -103,16 +103,16 @@
 
     <section>
       <div>
-        <h1>Article Collection</h1>
+        <h2>Article Collection</h2>
       </div>
       <!-- responsible for layout of articles -->
       <div>
         <!-- specific article -->
         <div>
           <div>
-            <h2>Article Title</h2>
+            <h3>Article Title</h3>
             <p></p>
-            <img src="" alt="" />
+            <img src="static/assets/genericProgrammer.png" alt="generic programmer" id="article-image">
             <div>
               <!-- Author information -->
             </div>
